# ogx-erp

./: .gitignore  README.md  apps.json  license.txt  pyproject.toml
deploy/: .vultr_firewall_id  .vultr_instance_id  .vultr_ip  bootstrap-server.sh  build-image.sh  create-site.sh  env.example  generate-compose.sh
ogx_studio/: boot.py  hooks.py  install.py  modules.txt
ogx_studio/config/: desktop.py
